Fixed some header issues on mobile

--- a/frontend/src/components/About/index.scss
+++ b/frontend/src/components/About/index.scss
@@ -1,3 +1,11 @@
+.text-zone h1{
+  margin-left: 5px;
+}
+.text-zone h1 span{
+  padding-bottom: 10px;
+  padding-top:10px;
+}
+
 .stage-cube-cont {
   width: 50%;
   height: 100%;
