--- a/frontend/src/components/Portfolio/index.scss
+++ b/frontend/src/components/Portfolio/index.scss
@@ -1,24 +1,36 @@
 
 .portfolio-page {
-    padding: 0 20px;
+    padding: 0 10px;
     width: 100%;
     height: 100%;
     overflow: auto;
 
     h1.page-title {
-        margin: 20px 0;
-        padding-top: 40px;
+        margin: 10px 0;
+        padding-top: 10px;
         margin-left: 110px;
+    }
+    .text-zone h1{
+        margin-left: 5px;
+    }
+    .text-zone h1 span{
+        padding-bottom: 10px;
+        padding-top:10px;
     }
 
     h2 {
-        font-size: 24px;
+        font-size: 30px;
         font-family: 'Coolvetica';
         color: #fff;
         font-weight: 400;
         margin-top: 0;
         position: relative;
         margin-bottom: 10px;
+        display: inline-block;
+        border-bottom: 2px solid #fff;
+        padding-bottom: 3px;
+        width: auto;
+
     }
 
     .images-container {
@@ -79,6 +91,7 @@
         .btn {
             margin-top: 20px;
             margin-bottom: 10px;
+            margin-right: 5px;
             padding: 0 20px;
             height: 40px;
             line-height: 34px;
@@ -111,6 +124,7 @@
             z-index: 2;
             transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
             opacity: 0;
+
         }
 
         &:hover:after {
